Fix letter spacing for date on small screens

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -43,6 +43,7 @@ body{
   font-size: 3em;
   @media(max-width: 600px){
     font-size: 2em;
+    letter-spacing: -5px;
   }
   /*font-family: 'Mila Script Sans Regular'*/
 }
